--- a/examples/parameter_example.yml
+++ b/examples/parameter_example.yml
@@ -434,3 +434,12 @@ EAGLEAGN:
   AGN_delta_T_K:                    3.16228e8  # Change in temperature to apply to the gas particle in an AGN feedback event in Kelvin.
   AGN_num_ngb_to_heat:              1.         # Target number of gas neighbours to heat in an AGN feedback event.
   max_reposition_mass:              2e8        # Maximal BH mass considered for BH repositioning in solar masses.
+
+# SIMBA feedback model
+SIMBAFeedback:
+  galaxy_mass_norm:                 102.329
+  v_circ_exp:                       0.26178
+  galsf_vel:                        1.
+  galsf_vel_slope:                  0.12
+  scale_factor_norm:                200.
+  wind_scatter:                     0.1
