--- a/examples/parameter_example.yml
+++ b/examples/parameter_example.yml
@@ -303,7 +303,7 @@ EAGLEEntropyFloor:
 # Parameters related to pressure floors    ----------------------------------------------
 
 GEARPressureFloor:
-  Jeans_factor: 10.       # Number of particles required to suppose a resolved clump and avoid the pressure floor.
+  jeans_factor: 10.       # Number of particles required to suppose a resolved clump and avoid the pressure floor.
 
 # Parameters related to cooling function  ----------------------------------------------
 
@@ -331,17 +331,17 @@ EAGLECooling:
   
 # Cooling with Grackle 3.0
 GrackleCooling:
-  CloudyTable: CloudyData_UVB=HM2012.h5       # Name of the Cloudy Table (available on the grackle bitbucket repository)
-  WithUVbackground: 1                         # Enable or not the UV background
-  Redshift: 0                                 # Redshift to use (-1 means time based redshift)
-  WithMetalCooling: 1                         # Enable or not the metal cooling
-  ProvideVolumetricHeatingRates: 0            # (optional) User provide volumetric heating rates
-  ProvideSpecificHeatingRates: 0              # (optional) User provide specific heating rates
-  MaxSteps: 10000                             # (optional) Max number of step when computing the initial composition
-  ConvergenceLimit: 1e-2                      # (optional) Convergence threshold (relative) for initial composition
-  ThermalTime_Myr: 5                          # (optional) Time for adiabatic cooling after a feedback event.
-  SelfShieldingMethod: -1                     # (optional) Grackle (1->3 for Grackle's ones, 0 for none and -1 for GEAR)
-  SelfShieldingThreshold_atom_per_cm3: 0.007  # Required only with GEAR's self shielding. Density threshold of the self shielding
+  cloudy_table: CloudyData_UVB=HM2012.h5       # Name of the Cloudy Table (available on the grackle bitbucket repository)
+  with_UV_background: 1                         # Enable or not the UV background
+  redshift: 0                                 # Redshift to use (-1 means time based redshift)
+  with_metal_cooling: 1                         # Enable or not the metal cooling
+  provide_volumetric_heating_rates: 0            # (optional) User provide volumetric heating rates
+  provide_specific_heating_rates: 0              # (optional) User provide specific heating rates
+  max_steps: 10000                             # (optional) Max number of step when computing the initial composition
+  convergence_limit: 1e-2                      # (optional) Convergence threshold (relative) for initial composition
+  thermal_time_myr: 5                          # (optional) Time for adiabatic cooling after a feedback event.
+  self_shielding_method: -1                     # (optional) Grackle (1->3 for Grackle's ones, 0 for none and -1 for GEAR)
+  self_shielding_threshold_atom_per_cm3: 0.007  # Required only with GEAR's self shielding. Density threshold of the self shielding
 
 # Parameters related to chemistry models  -----------------------------------------------
 
@@ -360,8 +360,8 @@ EAGLEChemistry:
 
 # GEAR chemistry model (Revaz and Jablonka 2018)
 GEARChemistry:
-  InitialMetallicity: 1         # Initial metallicity of the gas
-  ScaleInitialMetallicity: 1    # Should we scale the initial metallicity with the solar one?
+  initial_metallicity: 1         # Initial metallicity of the gas
+  scale_initial_metallicity: 1    # Should we scale the initial metallicity with the solar one?
 
 
 # Parameters related to star formation models  -----------------------------------------------
@@ -434,15 +434,9 @@ EAGLEFeedback:
 
 # GEAR feedback model
 GEARFeedback:
-  SupernovaeEnergy_erg: 0.1e51                      # Energy released by a single supernovae.
-  YieldsTable: chemistry-AGB+OMgSFeZnSrYBaEu-16072013.h5  # Table containing the yields.
+  supernovae_energy_erg: 0.1e51                      # Energy released by a single supernovae.
+  yields_table: chemistry-AGB+OMgSFeZnSrYBaEu-16072013.h5  # Table containing the yields.
   discret_yields: 0                                 # Should we use discret yields or the IMF integrated one?
-
-# Parameters related to IMF models  -----------------------------------------------
-# GEAR model
-GEARInitialMassFunction:
-  number_function_part: 4                           # (Optional) Number of part in the IMF
-  exponents: [0.7, -0.8, -1.7, -1.3]                # (Optional) Exponent of the IMF
 
 # Parameters related to AGN models  -----------------------------------------------
   
